fix(test): use Java 8 compatible file read