@@ -82,7 +82,7 @@ public final class CompletedTurnStaleStopContinuationPolicyTest {
         if (!Files.exists(path)) {
             path = Paths.get("src/main/java/com/shaterguy/chatgptselfrun/" + file);
         }
-        return Files.readString(path, StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
     }
 
     private static String between(String text, String start, String end) {
